--- a/mywordcount/myapp/templates/home.html
+++ b/mywordcount/myapp/templates/home.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="container">
-    <h1> 안녕~!내가 단어 수를 세줄게! 
+    <h1> 안녕~!내가 단어 수를 세줄게!~~!
     <a class="btn btn-info" href="{%url 'about'%}">ABOUT</a></h1>
     <br><br>
 
